[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game_objects/Tetromino/Tetromino.gd" type="Script" id=1]
[ext_resource path="res://src/game_objects/block/Block.tscn" type="PackedScene" id=2]

[node name="Tetromino" type="Node2D"]
script = ExtResource( 1 )

[node name="BlockA" parent="." instance=ExtResource( 2 )]

[node name="BlockB" parent="." instance=ExtResource( 2 )]

[node name="BlockC" parent="." instance=ExtResource( 2 )]

[node name="BlockD" parent="." instance=ExtResource( 2 )]
